force-app/main/default/objects/PeriodoTrabalho__c/PeriodoTrabalho__c.object-meta.xml
<CustomObject>
    <label>Período de Trabalho</label>
    <nameField>
        <label>Nome de Período de Trabalho</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Períodos de Trabalho</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>