force-app/main/default/objects/PeriodoTrabalho__c/fields/HoraSaida__c.field-meta.xml
<CustomField>
    <fullName>HoraSaida__c</fullName>
    <label>Hora da Saída</label>
    <type>Time</type>
</CustomField>