force-app/main/default/objects/PeriodoTrabalho__c/fields/QuantidadeColaborador__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeColaborador__c</fullName>
    <description>Informa quantos usuários tem no período de trabalho</description>
    <label>Quantidade de Colaboradores</label>
    <summaryForeignKey>PeriodoTrabalhoAtendente__c.PeriodoTrabalho__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>