force-app/main/default/objects/PeriodoTrabalho__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HoraEntrada__c</columns>
    <columns>HoraSaida__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>QuantidadeColaborador__c</columns>
    <columns>Ativo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>